refactor: Vite output 설정 정리 및 개발용 환경 대응
#1

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Figgy</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="figgy-dashboard"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
